Bug 141396 - calc: missing showing which tab sheet is active, in some spreadsheets!
Summary: calc: missing showing which tab sheet is active, in some spreadsheets!
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All Windows (All)
: low normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected
: 142193 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-03-31 16:05 UTC by Meetup
Modified: 2021-05-10 12:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
demo of some tab and some not (316.00 KB, application/vnd.ms-excel)
2021-03-31 19:01 UTC, Meetup
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Meetup 2021-03-31 16:05:40 UTC
Description:
when i have 5 tabs/sheets, i see below the page the numbers 1,2,3,4,5 or tab1....tab5. Great.
BUT in the past i could SEE which one was selected, now i can NOT see which one is selected, when i do not know the contence of the sheet.

suggestion: give the ACTIVE tab a different background color.

Actual Results:
not visable which tabsheet is active

Expected Results:
that i can see directly which tabsheet is active


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: nl
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Meetup 2021-03-31 18:52:30 UTC Comment hidden (me-too)
Comment 2 Meetup 2021-03-31 18:53:12 UTC Comment hidden (obsolete)
Comment 3 Meetup 2021-03-31 18:54:21 UTC Comment hidden (me-too)
Comment 4 Meetup 2021-03-31 19:01:42 UTC
Created attachment 170881 [details]
demo of some tab and some not

i erased the text from this spreadsheet.

This spreadsheet is as a desribed in the earlier text.

We have a lot of those spreadsheets more.
We want that in ALL the spreadsheet all the tabs show which one is active.
For 4 years we work only with LO.
Comment 5 Timur 2021-04-01 07:46:10 UTC
I reproduce with attached XLS on some sheets starting from LO 6.3 to 7.2+.
Repro also if saved as ODS. Could be a number of tabs or some other reason. 
In 6.3 there was an improvement of showing which sheet is active, it's underline now, previously it was different color. 
Let's call it regression so far.
Comment 6 Timur 2021-04-01 08:00:20 UTC
This problem is just with attached XLS. Can be corrected by changing tab color. 
Did you change tab color or make some other modifications? 
I lower the priority until this can be reproduced from scratch.
Comment 7 Timur 2021-04-01 08:15:35 UTC
I bisected this to "TabBar new look.." commit from bug 124572.
Comment 8 Mike Kaganski 2021-04-01 08:34:21 UTC
(In reply to Timur from comment #6)
> until this can be reproduced from scratch.

Easy: assign white explicitly as a tab color (not "default") :-)
Comment 9 Mike Kaganski 2021-04-01 09:45:30 UTC
https://gerrit.libreoffice.org/c/core/+/113448
Comment 10 Commit Notification 2021-04-01 13:16:12 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/754c6ca0df38de97f008feb2a8b027c836bc212b

tdf#141396: make sure that line color differs from the rest of the tab

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Mike Kaganski 2021-05-10 10:39:04 UTC
*** Bug 142193 has been marked as a duplicate of this bug. ***
Comment 12 Timur 2021-05-10 12:48:58 UTC
Mike, please see if you're interested in See Also Bug 132470 or to mark EasyHack, if so.