tdf#141396: make sure that line color differs from the rest of the tab

Change-Id: I9740fbfd776e8b4daa4e86d2ac978028535783b3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113448
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>